--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Carlos Estevez's website and data science work and projects"
+title: ""
 author: "Carlos Estevez"
 date: "2023-03-19"
 output: 
@@ -14,6 +14,7 @@ body {
 </style>
 
 <div class="alert alert-dismissible alert-info">
+<br><h2><strong>Carlos Estevez's website, data science work and projects</strong></h2>
   <img src="biopic.png" alt="Biography" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);height: 180px;width: 150px;">
   <h3><strong>Biography</strong></h3>
   <div style="text-align: justify;text-justify: inter-word;">My name is Carlos Estevez. I am from the Dominican Republic. I love sports specially baseball, basketball and playing chess.
